2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Made isOperandLiteral() work on const operand *.

2012-04-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (ifOperandsHave): fixed bug #3516746

2012-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c:
	  Added test for strrchr().
	* src/z80/gen.c,
	  src/SDCCpeeph.c:
	  Fixed memory leaks.

2012-04-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/Makefile.in,
	  support/regression/collate-results.py : another fix for bug #3477347
	* support/regression/ports/hc08/spec.mk: increase timeout to 30 seconds

2012-04-08 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c:
	  don't emit leading whitespaces in inline asm, 2nd try
	  fixed bug #3515390 - asm with leading whitespace passed to backends
	* src/z80/peep.c: made z80instructionSize() function more
	  ropbust: accept arbitrary number of arbitrary space characters
	  between mnemonic and the first operand

2012-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix invalid reads.
	* src/z80/gen.c:
	  Fix a memory leak.

2012-04-07 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, SDCCglobal.h: fixed mingw32 build on derna:
	  macros min and max should not be defined when compiled with C++
	* src/pic16/device.c, src/pic16/genarith.c, src/pic16/gen.c,
	  src/pic16/pcode.c, src/pic16/glue.c:
	  applied patch #3515647 - Correction patch on the PIC16's branch,
	  thanks to Molnar Karoly

2012-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Additional assertion to track down #3475617 and #3506333.

2012-04-06 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCgen.c, src/SDCCgen.h, src/SDCCralloc.hpp, src/common.h,
	  src/mcs51/gen.c, src/pic14/gen.c, src/z80/gen.c,
	  src/pic16/gen.c, src/ds390/gen.c, src/hc08/gen.c:
	  fixed NetBSD sparc64 build, code beautification,